<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cricketteam.app</groupId>
  <artifactId>cricketteam</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>cricketteam</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <picocli.version>4.7.5</picocli.version>
    <jacoco.maven.plugin.version>0.8.14</jacoco.maven.plugin.version>
    <pitest.maven.plugin.version>1.17.2</pitest.maven.plugin.version>
    <testcontainers.version>1.21.4</testcontainers.version>
    <build.helper.maven.plugin.version>3.6.1</build.helper.maven.plugin.version>
    <maven.failsafe.plugin.version>3.5.5</maven.failsafe.plugin.version>
    <maven.surefire.plugin.version>3.5.5</maven.surefire.plugin.version>
    <coveralls.maven.plugin.version>4.3.0</coveralls.maven.plugin.version>
    <jaxb.api.version>2.3.1</jaxb.api.version>
    <sonar.maven.plugin.version>3.8.0.2131</sonar.maven.plugin.version>
    <logback.version>1.2.13</logback.version>

    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.coverage.exclusions>
      **/model/*.*,
      **/CricketTeamSwingApp.*,
      **/PlayerSwingView.*
    </sonar.coverage.exclusions>
    <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
    <sonar.tests>
        ${project.basedir}/src/test/java,
        ${project.basedir}/src/it/java,
        ${project.basedir}/src/e2e/java
    </sonar.tests>
    <sonar.junit.reportPaths>
        ${project.build.directory}/surefire-reports,
        ${project.build.directory}/failsafe-reports
    </sonar.junit.reportPaths>
    <sonar.issue.ignore.multicriteria>e1,e2,e3</sonar.issue.ignore.multicriteria>
    <sonar.issue.ignore.multicriteria.e1.ruleKey>java:S2699</sonar.issue.ignore.multicriteria.e1.ruleKey>
    <sonar.issue.ignore.multicriteria.e1.resourceKey>**/PlayerSwingViewTest.java</sonar.issue.ignore.multicriteria.e1.resourceKey>
    <sonar.issue.ignore.multicriteria.e2.ruleKey>java:S3577</sonar.issue.ignore.multicriteria.e2.ruleKey>
    <sonar.issue.ignore.multicriteria.e2.resourceKey>**/PlayerSwingAppE2E.java</sonar.issue.ignore.multicriteria.e2.resourceKey>
    <sonar.issue.ignore.multicriteria.e3.ruleKey>java:S1450</sonar.issue.ignore.multicriteria.e3.ruleKey>
    <sonar.issue.ignore.multicriteria.e3.resourceKey>**/PlayerSwingView.java</sonar.issue.ignore.multicriteria.e3.resourceKey>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>de.bwaldvogel</groupId>
      <artifactId>mongo-java-server</artifactId>
      <version>1.43.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.24.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.5.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-swing-junit</artifactId>
      <version>3.17.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>mongodb</artifactId>
      <version>${testcontainers.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-sync</artifactId>
      <version>4.11.1</version>
    </dependency>
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>${picocli.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>
  </dependencies>

  <build>
      <pluginManagement>
          <plugins>
              <plugin>
                  <groupId>org.sonarsource.scanner.maven</groupId>
                  <artifactId>sonar-maven-plugin</artifactId>
                  <version>${sonar.maven.plugin.version}</version>
              </plugin>
          </plugins>
      </pluginManagement>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>${maven.surefire.plugin.version}</version>
              <configuration>
                  <useModulePath>false</useModulePath>
                  <includes>
                      <include>**/*Test.java</include>
                  </includes>
                  <excludes>
                      <exclude>**/*IT.java</exclude>
                      <exclude>**/*E2E.java</exclude>
                  </excludes>
              </configuration>
          </plugin>
          <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>build-helper-maven-plugin</artifactId>
              <version>${build.helper.maven.plugin.version}</version>
              <executions>
                  <execution>
                      <id>add-test-sources</id>
                      <phase>generate-test-sources</phase>
                      <goals>
                          <goal>add-test-source</goal>
                      </goals>
                      <configuration>
                          <sources>
                              <source>src/it/java</source>
                              <source>src/e2e/java</source>
                          </sources>
                      </configuration>
                  </execution>
              </executions>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-failsafe-plugin</artifactId>
              <version>${maven.failsafe.plugin.version}</version>
              <executions>
                  <execution>
                      <id>default-it</id>
                      <goals>
                          <goal>integration-test</goal>
                          <goal>verify</goal>
                      </goals>
                      <configuration>
                          <includes>
                              <include>**/*IT.java</include>
                          </includes>
                          <excludes>
                              <exclude>**/*E2E.java</exclude>
                          </excludes>
                      </configuration>
                  </execution>
                  <execution>
                      <id>e2e-tests</id>
                      <goals>
                          <goal>integration-test</goal>
                          <goal>verify</goal>
                      </goals>
                      <configuration>
                          <includes>
                              <include>**/*E2E.java</include>
                          </includes>
                          <excludes>
                              <exclude>**/*IT.java</exclude>
                          </excludes>
                      </configuration>
                  </execution>
              </executions>
          </plugin>
      </plugins>
  </build>

  <profiles>
      <profile>
          <id>jacoco</id>
          <build>
              <plugins>
                  <plugin>
                      <groupId>org.jacoco</groupId>
                      <artifactId>jacoco-maven-plugin</artifactId>
                      <version>${jacoco.maven.plugin.version}</version>
                      <configuration>
                          <excludes>
                              <exclude>**/model/*.*</exclude>
                              <exclude>**/CricketTeamSwingApp.*</exclude>
                          </excludes>
                      </configuration>
                      <executions>
                          <execution>
                              <goals>
                                  <goal>prepare-agent</goal>
                                  <goal>report</goal>
                              </goals>
                          </execution>
                      </executions>
                  </plugin>
              </plugins>
          </build>
      </profile>
      <profile>
          <id>pit</id>
          <build>
              <plugins>
                  <plugin>
                      <groupId>org.pitest</groupId>
                      <artifactId>pitest-maven</artifactId>
                      <version>${pitest.maven.plugin.version}</version>
                      <configuration>
                          <targetClasses>
                              <param>com.cricketteam.app.cricketteam.controller.*</param>
                              <param>com.cricketteam.app.cricketteam.repository.*</param>
                          </targetClasses>
                           <targetTests>
                               <param>com.cricketteam.app.cricketteam.controller.*Test</param>
                               <param>com.cricketteam.app.cricketteam.controller.*IT</param>
                               <param>com.cricketteam.app.cricketteam.repository.*Test</param>
                               <param>com.cricketteam.app.cricketteam.repository.*IT</param>
                           </targetTests>
                          <parseSurefireConfig>false</parseSurefireConfig>
                          <excludedClasses>
                              <param>com.cricketteam.app.cricketteam.model.*</param>
                              <param>com.cricketteam.app.cricketteam.app.swing.CricketTeamSwingApp</param>
                          </excludedClasses>
                          <timestampedReports>false</timestampedReports>
                          <timeoutConstant>20000</timeoutConstant>
                          <timeoutFactor>3.0</timeoutFactor>
                      </configuration>
                      <executions>
                          <execution>
                              <goals>
                                  <goal>mutationCoverage</goal>
                              </goals>
                          </execution>
                      </executions>
                  </plugin>
              </plugins>
          </build>
      </profile>
      <profile>
          <id>coveralls</id>
          <build>
              <plugins>
                  <plugin>
                      <groupId>org.eluder.coveralls</groupId>
                      <artifactId>coveralls-maven-plugin</artifactId>
                      <version>${coveralls.maven.plugin.version}</version>
                      <dependencies>
                          <dependency>
                              <groupId>javax.xml.bind</groupId>
                              <artifactId>jaxb-api</artifactId>
                              <version>${jaxb.api.version}</version>
                          </dependency>
                      </dependencies>
                      <configuration>
                          <jacocoReports>
                              <jacocoReport>${project.build.directory}/site/jacoco/jacoco.xml</jacocoReport>
                          </jacocoReports>
                          <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
                      </configuration>
                  </plugin>
              </plugins>
          </build>
      </profile>
  </profiles>
</project>
